--- a/boundary/reviewer_viewDetailUpdatePaperPage.html
+++ b/boundary/reviewer_viewDetailUpdatePaperPage.html
@@ -95,7 +95,7 @@
                             </a>
 
                         </li>
-                        <li class="nav-item active">
+                        <!-- <li class="nav-item active">
                             <a href="reviewer_addBidPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/add.svg"></i>
                                 <p class="navHeader">
@@ -103,7 +103,7 @@
                                 </p>
                             </a>
 
-                        </li>
+                        </li> -->
                         <li class="nav-item active">
                             <a href="reviewer_viewBidPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
