--- a/boundary/reviewer_profilePage.html
+++ b/boundary/reviewer_profilePage.html
@@ -28,6 +28,7 @@
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
         <!-- Preloader -->
+		
         <div class="preloader flex-column justify-content-center align-items-center">
             <!-- <img class="animation__shake" src="dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60"> -->
         </div>
@@ -67,7 +68,7 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex" id="platform_name">
                     <span class="platform_name brand-image-xs logo-xl">
-                        Reviewer Patform
+                        Reviewer Platform
                     </span>
                     <span class="platform_name brand-image-xl logo-xs" id="platformShort_name">
                         Rev
