--- a/idkWhatImDoing/lala.html
+++ b/idkWhatImDoing/lala.html
@@ -8,9 +8,19 @@
 		<h1>lala.html</h1>
 		
 
-        <form method="post" action="<?php print $_SERVER['PHP_SELF'];?>">
+        <!-- <form method="post" action="<?php print $_SERVER['PHP_SELF'];?>">
           Name: <input type="text" name="fname">
           <input type="submit">
+        </form> -->
+		
+		<form method="post" action="lala.php">
+          <!-- Name: <input type="text" name="fname"> -->
+          <input type="submit" name="fname" value="person2">
+        </form>
+		
+		<form method="post" action="lala.php">
+          <!-- Name: <input type="text" name="fname"> -->
+          <button name="fname" value="lala123">lala123</button>
         </form>
 
 		<?php
