--- a/boundary/reviewer_viewBidPage.html
+++ b/boundary/reviewer_viewBidPage.html
@@ -185,6 +185,7 @@
                                     <tr>
                                         <th>Paper ID</th>
                                         <th>Paper Name</th>
+                                        <th>Open paper</th>
                                         <th>Number of reviewer bid</th>
                                         <th>Add Bid</th>
                                         <th>Delete Bid</th>
@@ -203,10 +204,14 @@
                                             PaperA
                                         </td>
                                         <td>
+
+                                        </td>
+                                        <td>
                                             <!-- retrieve author name -->
 
                                             2
                                         </td>
+
                                         <td>
 
                                             <!-- <a href="reviewer_addBidPage.html">
