--- a/boundary/conferenceChair_allocatePaperPage.html
+++ b/boundary/conferenceChair_allocatePaperPage.html
@@ -151,6 +151,12 @@
                     <div class="card-header" style="padding-top: 0; padding-bottom: 0; background-color: white;">
                         <p style="font-size:20px; color: black; margin-left: 10px; margin-top: 25px;">
                             Allocated paper</p>
+                        <div class="form-group">
+                            <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success" style="float: right;">
+                                <input type="checkbox" class="custom-control-input" id="conferenceChair_allocateAutomatically">
+                                <label class="custom-control-label" for="conferenceChair_allocateAutomatically">Toggle this to swtich allocation to automatically</label>
+                            </div>
+                        </div>
                     </div>
                     <div style="padding: 30px;">
                         <div class="form-group" style="display: flex;">
