--- a/boundary/reviewer_viewPaperPage.html
+++ b/boundary/reviewer_viewPaperPage.html
@@ -179,50 +179,50 @@
 
                             <tbody>
                                 <?php 
-							//for ($x = 0; $x < $numOfRows; $x++)
-							foreach(($stmt->fetchAll()) as $v)
-							{
-								//$stmt->execute([]);
-								echo '
-                                <tr>
-                                    <td>
-                                        <!-- retrieve paper id -->
-                                        12345678
-										//echo " echo $cookie_name";
-                                    </td>
-                                    <td>
-                                        <!-- retrieve paper name --> 
-										' , $v["paperName"] , '
-                                        <!-- PaperA --> 
-                                    </td>
-                                    <td>
-                                        <!-- retrieve author name -->
-										' , $v["authorName"] , '
-                                        <!-- author -->
-                                    </td> 
-                                    <td>
-                                        <a href="../boundary/reviewer_addRatingReviewPage.html">
-                                            <button type="button" class="detail_action_btn">
-                                            Add
-                                        </button>
-                                        </a>
-                                    </td>
-                                    <td>
-										<!-- <form method="post" action="../controller/viewPaperDetailController.php">
-										  <button name="paperName" value="';echo $v["paperName"]; echo '" 
-										  class="detail_action_btn">View Detail</button>
-										</form> -->
-                                        <a href="../boundary/reviewer_viewDetailUpdatePaperPage.html">
-                                            <button type="button" class="detail_action_btn">
-                                                View Detail
-                                        </button>
-                                        </a>
+								//for ($x = 0; $x < $numOfRows; $x++)
+								foreach(($stmt->fetchAll()) as $v)
+								{
+									//$stmt->execute([]);
+									echo '
+									<tr>
+										<td>
+											<!-- retrieve paper id -->
+											12345678
+											//echo " echo $cookie_name";
+										</td>
+										<td>
+											<!-- retrieve paper name --> 
+											' , $v["paperName"] , '
+											<!-- PaperA --> 
+										</td>
+										<td>
+											<!-- retrieve author name -->
+											' , $v["authorName"] , '
+											<!-- author -->
+										</td> 
+										<td>
+											<a href="../boundary/reviewer_addRatingReviewPage.html">
+												<button type="button" class="detail_action_btn">
+												Add
+											</button>
+											</a>
+										</td>
+										<td>
+											<form method="post" action="../controller/viewPaperDetailController.php">
+											  <button name="paperName" value="';echo $v["paperName"]; echo '" 
+											  class="detail_action_btn">View Detail</button>
+											</form>
+											<!-- <a href="../boundary/reviewer_viewDetailUpdatePaperPage.html">
+												<button type="button" class="detail_action_btn">
+													View Detail
+											</button>
+											</a> -->
 
-                                    </td>
-                                </tr>
-								'; 
-							}
-							?>
+										</td>
+									</tr>
+									'; 
+								}
+								?>
                             </tbody>
 
                         </table>
