wierd spacing on profile page

--- a/boundary/reviewer_viewDetailUpdatePaperPage.html
+++ b/boundary/reviewer_viewDetailUpdatePaperPage.html
@@ -105,7 +105,7 @@
 
                         </li> -->
                         <li class="nav-item active">
-                            <a href="reviewer_viewBidPage.html" class="nav-link">
+                            <a href="reviewer_viewBid.php" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
                                     View bid
@@ -114,7 +114,7 @@
                         </li>
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
-                            <a href="reviewer_profilePage.html" class="nav-link ">
+                            <a href="reviewer_profile.php" class="nav-link ">
                                 <i class="nav-icon"><img src="../img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
