--- a/boundary/reviewer_viewPaperPage.html
+++ b/boundary/reviewer_viewPaperPage.html
@@ -87,7 +87,7 @@
                             </a>
                         </li> -->
                         <li class="nav-item active">
-                            <a href="../boundary/reviewer_viewPaperPage.html" class="nav-link">
+                            <a href="../boundary/reviewer_viewPaper.php" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
                                     View paper
@@ -105,7 +105,7 @@
 
                         </li> -->
                         <li class="nav-item active">
-                            <a href="../boundary/reviewer_viewBidPage.html" class="nav-link">
+                            <a href="../boundary/reviewer_viewBid.php" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
                                     View bid
@@ -114,7 +114,7 @@
                         </li>
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
-                            <a href="../boundary/reviewer_profilePage.html" class="nav-link ">
+                            <a href="../boundary/reviewer_profile.php" class="nav-link ">
                                 <i class="nav-icon"><img src="../img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
@@ -208,7 +208,7 @@
 											</a>
 										</td>
 										<td>
-											<form method="post" action="../controller/viewPaperDetailController.php">
+											<form method="post" action="../boundary/reviewer_viewPaperDetail.php">
 											  <button name="paperName" value="';echo $v["paperName"]; echo '" 
 											  class="detail_action_btn">View Detail</button>
 											</form>
