updated cookie function

--- a/boundary/author_addPaperPage.html
+++ b/boundary/author_addPaperPage.html
@@ -293,6 +293,7 @@
                     theme: 'bootstrap4'
                 });
             });
+            console.log(document.cookie);
         </script>
 </body>
 
