--- a/boundary/reviewer_addRatingReviewPage.html
+++ b/boundary/reviewer_addRatingReviewPage.html
@@ -280,6 +280,7 @@
                 "responsive ": true,
             });
         });
+        console.log(document.cookie);
     </script>
 </body>
 
